@@ -75,8 +75,8 @@ public class CoalGeneratorEntity extends BaseGeneratorBlockEntity {
             --litTime;
         }
 
-        ItemStack stack = getItems().get(0);
-        if (!isLit() || !stack.isEmpty()) {
+        ItemStack stack = getItems().getFirst();
+        if (!isLit() && !stack.isEmpty()) {
             litTime = getBurnDuration(stack);
             litDuration = litTime;
             if (isLit()) {
